# VLM_test

./: CMakeLists.txt  DeepSeeka_OCR.py  Dockerfile  Jetson_Deployment_Guide.md  RAG.py  VLM-R1-Qwen25VL.py  benchmark_yolo.py  docker-compose.yml  export_yolo.py  grounding_dino.py  grounding_gino_local.py  requirements.txt  web.txt  yolo_inference.cpp
RAG/: RAG.py
